codepkg/objects/University__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Of_Employees__c</fullName>
        <label>Amount Of Employees</label>
        <summaryForeignKey>Employee__c.University__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Of_Students__c</fullName>
        <label>Amount Of Students</label>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grant_Sum__c</fullName>
        <label>Grant Sum</label>
        <summarizedField>Student__c.Grant__c</summarizedField>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Sum__c</fullName>
        <label>Payment Sum</label>
        <summarizedField>Student__c.Payment_For_Study__c</summarizedField>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>Payment_Sum__c - Salary_Sum__c - Grant_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rector</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Teacher</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Universities</relationshipLabel>
        <relationshipName>Universities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salary_Sum__c</fullName>
        <label>Salary Sum</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>University</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Uniersity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Universities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>